--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@ hdrbProj/.idea
 hdrbProj/db.sqlite3
 hdrbProj/*.pyc
 hdrbProj/__pycache__
+hdrbProj/*.log
+hdrbProj/*.pot
+hdrbProj/local_settings.py
+hdrbProj/db.sqlite3-journal
+hdrbProj/media
